# rates

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  setup.cfg  setup.py
binrates/: __init__.py  base.py  population.py
binrates/io/: logger.py  utils.py
binrates/statistics/: rvs.py
binrates/utils/: constants.py  kepler.py  plotter.py
